add project setup script and SWF_HOME

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -8,7 +8,7 @@ childlogdir=%(here)s/logs            ; Directory for child process log files
 nodaemon=false                 ; Run supervisord in the background
 minfds=1024                    ; Minimum available file descriptors
 minprocs=200                   ; Minimum available process descriptors
-user=wenaus               ; User to run programs as (if supervisord is run as root)
+user=torrewenaus               ; User to run programs as (if supervisord is run as root)
                                ; Ensure this user can write to log files and execute commands.
 
 [rpcinterface:supervisor]
@@ -18,14 +18,16 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///tmp/supervisor.sock ; URL for supervisorctl to connect to the server
 
 ; --- Agent Definitions ---
-; IMPORTANT: You MUST adjust the 'command' and 'directory' for each agent
+; IMPORTANT: You MUST adjust the 'command' for each agent
 ; based on your project structure and how each agent is started.
-; The 'directory' assumes agent repositories are cloned as siblings to this 'swf-testbed' repository.
-; e.g., /Users/torrewenaus/github/swf-daqsim-agent
+; The 'directory' is now parameterized using the SWF_HOME environment variable,
+; which should point to the directory containing all your swf-* repositories.
+; e.g., directory=%(ENV_SWF_HOME)s/swf-daqsim-agent
+; You must set the SWF_HOME environment variable in your shell.
 
 [program:swf-daqsim-agent]
-command=python main.py ; FIXME: Adjust to the actual command to start this agent (e.g., python -m swf_daqsim_agent.main)
-directory=/Users/wenaus/github/swf-daqsim-agent ; FIXME: Adjust to the absolute path of this agent's directory
+command=python -m swf_daqsim_agent.main ; FIXME: Adjust to the actual command to start this agent (e.g., poetry run python -m swf_daqsim_agent.main)
+directory=%(ENV_SWF_HOME)s/swf-daqsim-agent ; Path to this agent's directory
 autostart=true
 autorestart=true
 stdout_logfile=%(here)s/logs/%(program_name)s_stdout.log
@@ -33,8 +35,8 @@ stderr_logfile=%(here)s/logs/%(program_name)s_stderr.log
 stopsignal=QUIT ; Signal to send to stop the process (QUIT is often good for Python)
 
 [program:swf-data-agent]
-command=python main.py ; FIXME: Adjust to the actual command
-directory=/Users/wenaus/github/swf-data-agent ; FIXME: Adjust to the absolute path
+command=python -m swf_data_agent.main ; FIXME: Adjust to the actual command
+directory=%(ENV_SWF_HOME)s/swf-data-agent ; Path to this agent's directory
 autostart=true
 autorestart=true
 stdout_logfile=%(here)s/logs/%(program_name)s_stdout.log
@@ -42,8 +44,8 @@ stderr_logfile=%(here)s/logs/%(program_name)s_stderr.log
 stopsignal=QUIT
 
 [program:swf-processing-agent]
-command=python main.py ; FIXME: Adjust to the actual command
-directory=/Users/wenaus/github/swf-processing-agent ; FIXME: Adjust to the absolute path
+command=python -m swf_processing_agent.main ; FIXME: Adjust to the actual command
+directory=%(ENV_SWF_HOME)s/swf-processing-agent ; Path to this agent's directory
 autostart=true
 autorestart=true
 stdout_logfile=%(here)s/logs/%(program_name)s_stdout.log
@@ -51,8 +53,8 @@ stderr_logfile=%(here)s/logs/%(program_name)s_stderr.log
 stopsignal=QUIT
 
 [program:swf-fastmon-agent]
-command=python main.py ; FIXME: Adjust to the actual command
-directory=/Users/wenaus/github/swf-fastmon-agent ; FIXME: Adjust to the absolute path
+command=python -m swf_fastmon_agent.main ; FIXME: Adjust to the actual command
+directory=%(ENV_SWF_HOME)s/swf-fastmon-agent ; Path to this agent's directory
 autostart=true
 autorestart=true
 stdout_logfile=%(here)s/logs/%(program_name)s_stdout.log
@@ -60,8 +62,8 @@ stderr_logfile=%(here)s/logs/%(program_name)s_stderr.log
 stopsignal=QUIT
 
 [program:swf-mcp-agent]
-command=python main.py ; FIXME: Adjust to the actual command
-directory=/Users/wenaus/github/swf-mcp-agent ; FIXME: Adjust to the absolute path
+command=python -m swf_mcp_agent.main ; FIXME: Adjust to the actual command
+directory=%(ENV_SWF_HOME)s/swf-mcp-agent ; Path to this agent's directory
 autostart=true
 autorestart=true
 stdout_logfile=%(here)s/logs/%(program_name)s_stdout.log
