Centralize and robustify environment, test, and supervisor management
- Implement unified project environment setup via master setup.sh
- Refactor all run_tests.sh scripts to use the unified environment
- Fix Django ALLOWED_HOSTS for testserver and async test plugin issues
- Update supervisord.conf for robust agent/service management with unified venv
- Add/clarify prompt tips and documentation for environment and naming practices
- General cleanup and bugfixes for test reliability and maintainability

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,17 @@ services:
     environment:
       - ARTEMIS_USER=admin
       - ARTEMIS_PASSWORD=admin
+
+  postgres:
+    image: postgres:latest
+    environment:
+      POSTGRES_DB: swfdb
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: your_db_password
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
