--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,20 @@ dependencies = [
     # Dependencies from private GitHub Packages index
     "swf-common-lib",
     "swf-monitor",
-    "swf-daqsim-agent",
-    "swf-data-agent",
-    "swf-processing-agent",
-    "swf-fastmon-agent",
-    "swf-mcp-agent",
+    # "swf-daqsim-agent",
+    # "swf-data-agent",
+    # "swf-processing-agent",
+    # "swf-fastmon-agent",
+    # "swf-mcp-agent",
     # CLI tool dependencies
     "typer[all]", # Using typer[all] installs optional deps like rich
-    "supervisor"
+    "supervisor",
+    "psutil",
+]
+
+[project.optional-dependencies]
+test = [
+    "pytest",
 ]
 
 [project.scripts]
