Complete and clean up top-level test orchestration with robust repo handling
- Finalize the top-level run_tests.sh to robustly auto-discover and test all checked-out swf-* repos.
- Ensure missing repos are handled gracefully and results are clearly summarized.
- Clean up and clarify output for easier run discrimination.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ dependencies = [
 [project.optional-dependencies]
 test = [
     "pytest",
+    "pytest-asyncio",
+    "anyio",
+    "pytest-django",
 ]
 
 [project.scripts]
