--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,3 +1,20 @@
+; ===============================================================================
+;  SWF Testbed Supervisor Configuration
+; ===============================================================================
+;
+; ONBOARDING & AUTOMATION PRINCIPLES:
+;   - This project uses a unified Python virtual environment (see setup.sh).
+;   - You MUST run 'source setup_env.sh' in your shell before starting supervisord.
+;   - The SWF_HOME (ENV_SWF_HOME) environment variable is set by setup_env.sh and
+;     is used to parameterize agent/service directories.
+;   - AUTOMATION: Supervisor configs and scripts are designed to be robust:
+;       * If an agent/service repo is not checked out, its supervisor block will not cause errors.
+;       * If the logs/ directory is missing, it will be auto-created by setup scripts or at runtime.
+;   - For adding new agents/services, use the existing blocks as templates.
+;
+; For more, see the README Prompt Tips and onboarding sections.
+; ===============================================================================
+
 [unix_http_server]
 file=%(here)s/supervisor.sock   ; Path to the socket file in the project dir
 ;file=/tmp/supervisor.sock      ; Alternative: path to a temp socket file
