Robustify test infrastructure and output across all repos
- Enforced robust, minimal, and future-proof test assertions (esp. for HTML/UI)
- Added/updated conftest.py in each repo to prevent fragile or mis-invoked test runs
- Ensured pytest-django and test markers are always available and configured
- Updated logging to use pythonjsonlogger.json.JsonFormatter to eliminate deprecation warnings
- Cleaned up all test warnings and ensured all tests pass in all environments
- Added clear documentation tips for robust test writing and invocation
- Verified umbrella and local test scripts for all repos

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,3 +26,6 @@ test = [
 [project.scripts]
 # This creates the `swf-testbed` command in the user's PATH
 swf-testbed = "swf_testbed_cli.main:app"
+
+[tool.setuptools.packages.find]
+where = ["src"]
