--- a/supervisord.conf
+++ b/supervisord.conf
@@ -86,3 +86,19 @@ stdout_logfile=%(here)s/logs/%(program_name)s_stdout.log
 stderr_logfile=%(here)s/logs/%(program_name)s_stderr.log
 stopsignal=QUIT
 
+
+; --- Infrastructure Services for Standalone Operation ---
+; Redis (Channels channel layer for SSE relay)
+; Required to support remote ActiveMQ recipients via SSE in the testbed.
+; If your host provides a system-managed redis.service, you may disable this.
+[program:redis]
+command=redis-server --port 6379 --bind 127.0.0.1
+directory=%(here)s
+autostart=%(ENV_SWF_USE_LOCAL_REDIS)s   ; Set SWF_USE_LOCAL_REDIS=true in standalone dev; leave unset/false on platform
+autorestart=true
+stdout_logfile=%(here)s/logs/%(program_name)s_stdout.log
+stderr_logfile=%(here)s/logs/%(program_name)s_stderr.log
+stopsignal=TERM
+startsecs=3
+startretries=3
+
